# rPiClockDisplay

./: README.md  config.py  display.py  i2c_driver.py  intall_requirements.sh  lcd_char_grid.xls  pyproject.toml
rpi_clock_display/: __main__.py  backlight.py  config.py  display.py  i2c_driver.py  large_numbers.py  large_numbers2.py
tests/: conftest.py  test_time_display.py
