[tool.poetry]
name = "rpiclockdisplay"
version = "0.1.0"
description = "a raspberry pi based clock display"
authors = ["mshafer1"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
RPLCD = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
pytest-freezegun = "^0.4.2"
black = "^20.8b1"
ni-python-styleguide = "^0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
