[tool.poetry]
name = "rpi-clock-display"
version = "0.1.1"
description = "a raspberry pi based clock display"
authors = ["mshafer1"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
RPLCD = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "3.5.0"
pytest-mock = "3.0.0"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rPiClockDisplay = 'rpi_clock_display.display:main'
