[tool.poetry]
name = "rpi-clock-display"
version = "0.1.1"
description = "a raspberry pi based clock display"
authors = ["mshafer1"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
"luma.lcd" = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"
pytest-cov = "^2.11.1"
pytest-mock = "3.0.0"
pytest-freezegun = "^0.4.2"
pytest-snapshot = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rPiClockDisplay = 'rpi_clock_display.display:main'
